--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -9,7 +9,11 @@ overflow-y: hidden;
 .sidenav {
   width: 200px;
 }
+.mat-sidenav-content{
+width: 100%;
+height: 100%;
 
+}
 .sidenav .mat-toolbar {
   font-size: 28px;
     font-weight: bold;
@@ -27,7 +31,7 @@ overflow-y: hidden;
   z-index: 1;
   background-color: black;
   }
-.mat-toolbar.mat-primary
+
 
 
 .menu-list-item{
