--- a/src/app/components/hero/messages/messages.component.html
+++ b/src/app/components/hero/messages/messages.component.html
@@ -1,23 +1,19 @@
 <button mat-button (click)="ToggleMessageComponent()">
-  <mat-icon
-    matBadge="12"
-    matBadgeColor="accent"
-    class="badge-icon favorite-icon"
-    aria-label="Toggle Display Messages"
-    matTooltip="Toggle Display Messages"
-    #tooltip="matTooltip"
-    >favorite</mat-icon
-  >
+  <mat-icon matBadge="12" matBadgeColor="accent" class="badge-icon favorite-icon" aria-label="Toggle Display Messages"
+    matTooltip="Toggle Display Messages" #tooltip="matTooltip">favorite</mat-icon>
 </button>
 
 <div *ngIf="!ToggleMessages" class="container">
-  <h2>Messages {{ name }}</h2>
+  <h2>N.J.I.-AI<br>
+    Hi,
+    {{ name }}</h2>
 
   <button mat-raised-button (click)="messageService.clear()">
     Clear messages
   </button>
 
   <div *ngFor="let message of messageService.messages">
-    <p class="message">{{ message }}</p>
+    <p class="message">
+      {{ message }}</p>
   </div>
 </div>
