--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,9 +1,5 @@
 <div id="welcome-page" class="container-fluid">
-  <header
-    class="docs-header-background"
-    aria-label="Get started"
-    id="homepage-header"
-  >
+  <header class="docs-header-background" aria-label="Get started" id="homepage-header">
     <div class="docs-header-section">
       <div class="docs-header-headline">
         <h1 class="mat-h1">Jan Warzecha</h1>
@@ -15,57 +11,83 @@
 
   <div id="bio" class="homepage-tile">
     <h1>Bio</h1>
-    <mat-tab-group>
-  
+    <button mat-button (click)="english = !english" matTooltip="Toggle language ( EN | PL )" #tooltip="matTooltip" type="button"
+      aria-label="Toggle language ( EN | PL )">
+      <mat-icon>{{english ? 'language' : 'language'}}</mat-icon>
+
+      {{english ? 'PL' : 'EN'}}
+    </button>
+    <mat-tab-group *ngIf="english; else polish">
+
       <mat-tab label="Short">
-      <button mat-button (click)="english = !english">{{english ? 'polish' : 'english'}}
-<mat-icon>{{english ? 'play_circle_outline' : 'pause_circle_outline'}}</mat-icon>
-
-
-      </button>
-      english = {{english}}
-
-      <img class="bio-lang" src='./assets/img/english.png'>
-      <img src="assets/img/polish.png">
-      <br>
-      <div *ngIf="english; else polish">
-      <h1>Short Bio</h1><br>
-      <H2>Hi, I'm Jan</H2>
-      
-      <p>Self-Taught Coder</p>
-      <p>English speaker - C2</p>
-      <p>Graduated and experienced in Exploration Geology</p>
-      <p>Curious without limits </p>
-    
-    </div>
-
-
-      <ng-template #polish>
-      <h1>Krótka Biografia</h1><br>
-      <H2>Cześć, jestem Jan</H2>
-      
-      <p>Koder samouk</p>
-      <p>Anglojęzyczny - C2</p>
-      <p>Absolwent doświadczony w geologii poszukiwawczej</p>
-      <p>Ciekawy bez granic </p>
-      
-      </ng-template>
-        
-      
-      
+        <div>
+          <h1>Short Bio</h1><br>
+          <H2>Hi, I'm Jan</H2>
+          <p>Self-Taught Coder</p>
+          <p>English speaker - C2</p>
+          <p>Graduated and experienced in Exploration Geology</p>
+          <p>Curious without limits </p>
+        </div>
       </mat-tab>
 
       <mat-tab label="Professional">
-        <h2>Read more about my professional career path</h2>
-      <p>Your best hr decision ever made</p>
+        <div>
+          <h1>Short Bio</h1><br>
+          <H2>Hi, I'm Jan</H2>
+          <p>Self-Taught Coder</p>
+          <p>English speaker - C2</p>
+          <p>Graduated and experienced in Exploration Geology</p>
+          <p>Curious without limits </p>
+        </div>
       </mat-tab>
-      
-      <mat-tab label="Personal"> 
-        <h2>Personal information</h2>
-        <p>Your best hr decision ever made</p>
+
+      <mat-tab label="Personal">
+        <div>
+          <h1>Short Bio</h1><br>
+          <H2>Hi, I'm Jan</H2>
+          <p>Self-Taught Coder</p>
+          <p>English speaker - C2</p>
+          <p>Graduated and experienced in Exploration Geology</p>
+          <p>Curious without limits </p>
+        </div>
       </mat-tab>
-      
     </mat-tab-group>
+
+
+    <ng-template #polish>
+      <mat-tab-group>
+        <mat-tab label="W skrócie">
+          <h1>O mnie w skrócie</h1>
+          <h2>Witam nazywam się Jan.</h2>
+
+          <h3>Programuje od Lipca 2020<br>
+          Jestem magistrem geologii,
+          z 9 letnim stazem, 
+          angielski,
+        szkoły
+      jezyki
+    potencjał</h3>
+          </mat-tab>
+
+          <mat-tab label="Zawodowo">
+          <h1>Kariera zawodowa</h1><br>
+          <H2>Hi, I'm Jan</H2>
+          <p>Self-Taught Coder</p>
+          <p>English speaker - C2</p>
+          <p>Graduated and experienced in Exploration Geology</p>
+          <p>Curious without limits </p>
+        </mat-tab>
+
+        <mat-tab label="Prywatnie">
+          <h1>Hobby etc.</h1><br>
+          <H2>Hi, I'm Jan</H2>
+          <p>Self-Taught Coder</p>
+          <p>English speaker - C2</p>
+          <p>Graduated and experienced in Exploration Geology</p>
+          <p>Curious without limits </p>
+        </mat-tab>
+      </mat-tab-group>
+    </ng-template>
   </div>
 
   <div id="projects" class="homepage-tile">
@@ -81,27 +103,23 @@
   <div id="contact" class="homepage-tile">
     <h1>Contact me</h1>
 
+
+
+
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Leave a comment</mat-label>
+      <textarea matInput placeholder="yeah... write something"></textarea>
+    </mat-form-field>
+
+
+
+
     
-    
-
-<mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>Leave a comment</mat-label>
-    <textarea matInput placeholder="yeah... write something"></textarea>
-  </mat-form-field>
-
-
-
-
-    <p></p>
     <h2>Copy my mail</h2>
     <h3>
       <div class="contact-clipboard">
         My Mail
-        <button
-          mat-button
-          cdkCopyToClipboard="ThisIsMyMail@mmail.com"
-          (click)="CopiedMsg()"
-        >
+        <button mat-button cdkCopyToClipboard="ThisIsMyMail@mmail.com" (click)="CopiedMsg()">
           <mat-icon>content_copy</mat-icon>Copy to clipboard
         </button>
       </div>
