--- a/src/app/components/projects-grid/projects-grid.component.scss
+++ b/src/app/components/projects-grid/projects-grid.component.scss
@@ -6,6 +6,7 @@
   .grid-tile{
 width: 100%;
 height: 100%;
+
 }
 .dashboard-card {
  
@@ -19,10 +20,13 @@ height: 100%;
   max-width: 100%;
 max-height: 100%;
  
-  &:hover {
+  
+}
+
+mat-card:hover {
     @include mat.elevation(8);
   }
-}
+
 .card-title{
     font-size: 26px;
     font-weight: bold;
@@ -76,5 +80,6 @@ mat-card img{
   margin-left:auto;
   margin-right:auto;
   margin-top: 3%;
+  max-width: 50vw;
   
 }
