--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,7 +1,12 @@
+@use '@angular/material' as mat;
+
 body{max-height: 100%;
 overflow-y: hidden;
 
 }
+*:hover {
+    @include mat.elevation(8);
+  }
 .sidenav-container {
  height: 100%;
 }
@@ -9,16 +14,13 @@ overflow-y: hidden;
 .sidenav {
   width: 200px;
 }
-.mat-sidenav-content{
-width: 100%;
-height: 100%;
 
-}
+
+
 .sidenav .mat-toolbar {
   font-size: 28px;
     font-weight: bold;
-    line-height: 28px;
-    
+    line-height: 28px;    
   background: inherit;
 }
 
@@ -30,6 +32,8 @@ height: 100%;
   top: 0;
   z-index: 1;
   background-color: black;
+  color:white;
+
   }
 
 
@@ -39,8 +43,18 @@ height: 100%;
   font-size: 26px;
     font-weight: 300;
     line-height: 28px;
+    margin: 4px;
     
 }
+.menu-item{
+margin: 15px 0;
+@include mat.elevation(4);
+    :hover {
+    @include mat.elevation(8);
+  }
+}
+
+
 .side-nav-toolbar-spacer {
   flex: 1 1 auto;
 }
@@ -55,6 +69,20 @@ height: 100%;
   align-items: center;
 }
 .menu-github-logo{
-   filter:invert(100%);
+   mix-blend-mode: difference;
+   filter:invert(1);
+   transform: scale(1.2);
+   color:white;
    
+}
+.menu2{
+  background-color:rgb(95, 64, 64);
+}
+.tooltips-button{
+  
+  
+  @include mat.elevation(2);
+    :hover {
+    @include mat.elevation(8);
+  }
 }
