--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -3,7 +3,7 @@
     <div class="docs-header-section">
       <div class="docs-header-headline">
         <h1 class="mat-h1">Jan Warzecha</h1>
-        <h2>Full Stack Developer</h2>
+        <h2 class="mat-h2">Full Stack Developer</h2>
       </div>
       <div class="docs-header-start"></div>
     </div>
