--- a/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
+++ b/src/app/components/ngb-carusel/ngb-carusel/ngb-carusel.component.html
@@ -28,10 +28,10 @@
     <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
         <mat-expansion-panel-header>
             <mat-panel-title>
-                Picture Slideshow Controls:
+                Controls:
             </mat-panel-title>
             <mat-panel-description>
-                Controls are {{panelOpenState ? 'open' : 'closed'}}
+                Controls {{panelOpenState ? 'open' : 'closed'}}
             </mat-panel-description>
         </mat-expansion-panel-header>
 
