--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -13,7 +13,7 @@
         </mat-autocomplete>
     </mat-form-field>
 <mat-form-field appearance="fill" class="example-full-width">
-    <mat-label>What's your name?</mat-label>
+    <mat-label>Name?</mat-label>
     <input matInput [(ngModel)] ="name">
 </mat-form-field>
 
