--- a/src/app/components/hero/messages/messages.component.html
+++ b/src/app/components/hero/messages/messages.component.html
@@ -6,7 +6,7 @@
 <div *ngIf="!ToggleMessages" class="container">
  <h1>Messages:</h1>
   <h2>
-    Hi,{{titleForm}} {{ nameForm }} from {{countryForm}}</h2>
+    Hi,{{title}} {{ name }} from {{country}}</h2>
 
   
 
