--- a/src/app/components/projects-grid/projects-grid.component.html
+++ b/src/app/components/projects-grid/projects-grid.component.html
@@ -20,8 +20,8 @@
           <img mat-card-s-image [src]="card.img_url" class="img_project">
           <div class="card-description">{{card.description}}</div>
         <mat-card-actions class="button-group">
-          <a mat-raised-button href="{{card.gh_url}}">Github Repo</a>
-          <a mat-raised-button href="{{card.gh_pages_url}}">See the project</a>
+          <a mat-raised-button href="{{card.gh_url}}" target="_blank">Github Repo</a>
+          <a mat-raised-button href="{{card.gh_pages_url}}" target="_blank">See the project</a>
         </mat-card-actions>
 
         </mat-card-content>
