--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -9,12 +9,11 @@ $margin-promotion-sections-small: 152px;
 }
 
 .docs-header-background::before {
-  
-  content: '';
+  content: "";
   position: absolute;
-  background-image: url('../../../assets/img/homepage/portfolio-header-custom-logo.png');
+  background-image: url("../../../assets/img/homepage/portfolio-header-custom-logo.png");
   background-size: 500px;
-  top:0;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
@@ -23,26 +22,58 @@ $margin-promotion-sections-small: 152px;
   opacity: 0.2;
 }
 .docs-header-background::after {
-	content:'';
-  top:0;
-	transform:translateX(100%);
-	width:100%;
-	height:100%;
-	position: absolute;
-	z-index:1;
+  content: "";
+  top: 0;
+  transform: translateX(100%);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
 
-	/*animation: slide 1s infinite 4s;
+  /*animation: slide 1s infinite 4s;
 	 
   /* 
   CSS Gradient - complete browser support from http://www.colorzilla.com/gradient-editor/ 
   
   background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(128,186,232,0) 99%, rgba(125,185,232,0) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(50%,rgba(255,255,255,0.8)), color-stop(99%,rgba(128,186,232,0)), color-stop(100%,rgba(125,185,232,0))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0.8) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0.8) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0.8) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%); /* IE10+ */
-	background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0.8) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#007db9e8',GradientType=1 ); /* IE6-9 */
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    color-stop(0%, rgba(255, 255, 255, 0)),
+    color-stop(50%, rgba(255, 255, 255, 0.8)),
+    color-stop(99%, rgba(128, 186, 232, 0)),
+    color-stop(100%, rgba(125, 185, 232, 0))
+  ); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(128, 186, 232, 0) 99%,
+    rgba(125, 185, 232, 0) 100%
+  ); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(128, 186, 232, 0) 99%,
+    rgba(125, 185, 232, 0) 100%
+  ); /* Opera 11.10+ */
+  background: -ms-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(128, 186, 232, 0) 99%,
+    rgba(125, 185, 232, 0) 100%
+  ); /* IE10+ */
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(128, 186, 232, 0) 99%,
+    rgba(125, 185, 232, 0) 100%
+  ); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#007db9e8',GradientType=1 ); /* IE6-9 */
 }
 
 /* animation 
@@ -53,7 +84,7 @@ $margin-promotion-sections-small: 152px;
 }
 */
 .docs-header-section {
-  width: 90%;
+  width: 90vh;
   position: absolute;
   z-index: 0;
   text-align: center;
@@ -61,83 +92,84 @@ $margin-promotion-sections-small: 152px;
   left: 50%;
   transform: translate(-50%, -50%);
 
-.docs-header-headline {
-    height: 100%;  
-    
-  .mat-h1 {
-    font-size: 66px;
-    font-weight: bold;
-    line-height: 56px;
-    margin: 15px 5px;
+  .docs-header-headline {
+    height: 100%;
+
+    .mat-h1 {
+      font-size: 66px;
+      font-weight: bold;
+      line-height: 56px;
+      margin: 15px 5px;
+    }
+    h2 {
+      font-size: 20px;
+      font-weight: 300;
+      line-height: 28px;
+      margin: 15px 0 25px 0;
+    }
   }
-  h2 {
-    font-size: 20px;
-    font-weight: 300;
-    line-height: 28px;
-    margin: 15px 0 25px 0;
-  }
- }
 }
-  mat-divider {
-    width: 100%;
-  }
+mat-divider {
+  width: 100%;
+}
 
-  mat-icon {
-    vertical-align: middle;
-  }
+mat-icon {
+  vertical-align: middle;
+}
 
-  .docs-header-button-group{
-    position: absolute;
-   display: flex;
-  flex-flow: row wrap;
+.docs-header-button-group {
+  position: absolute;
+  display: flex;
+  flex-flow: row nowrap;
   row-gap: 1em;
   column-gap: 1em;
- align-items: center;
-  justify-content:space-evenly;
-  
-  bottom: 5%;
+  align-items: center;
+  justify-content: space-evenly;
+  left:40vw;
+
+  bottom: 15%;
   margin: 0 auto;
- 
-  }
-.container-fluid {padding:0px;
-  .homepage-tile{height: auto;
-    
-    
-  }
-  h1 {
-    font-size: 46px;
-    font-weight: bold;
-    line-height: 56px;
-    margin: 15px 5px;
-  }
-  h2{
-    font-size: 20px;
-    font-weight: 300;
-    line-height: 20px;
-    margin: 15px 0 25px 0;
+}
+.container-fluid {
+  padding: 0px;
+  .homepage-tile {
+    height: auto;
+    h1 {
+      font-size: 36px;
+      font-weight: bold;
+      line-height: 36px;
+      margin: 15px 5px;
     }
-    p {
-    font-size: 14px;
-    font-weight: 200;
-    line-height: 14px;
-    margin: 0 0 24px 0;
-    padding: 0;
   }
 }
-#bio{
-  height: 100%;
-
-}
-#bio mat-tab-group h1{
-font-size: 30px;
-}
-
-
-.contact-clipboard{
-  width:auto;
+#bio {
   
+  mat-tab-group {
+    
+    h1 {
+      font-size: 22px;
+      font-weight: bold;
+      line-height: 22px;
+      margin: 15px 10px;
+    }
+    h2 {
+      font-size: 18px;
+      font-weight: 300;
+      line-height: 20px;
+      margin: 15px 10px 25px 10px;
+    }
+    ul li {
+      font-size: 12px;
+      font-weight: 200;
+      line-height: 12px;
+      margin: 15px 10px;
+      padding: 0;
+    }
   }
-
+}
+.contact-clipboard {
+  width: auto;
+}
 
 /*comment out unused css
 
@@ -336,4 +368,3 @@ font-size: 30px;
 }
 
 */
-
