--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -33,7 +33,7 @@
 
       <a mat-list-item class="menu-item" matTooltip="Read more in-depth information about the author of this code portfolio"
         routerLinkActive="active" (click)="buttonClick('about')" #tooltip="matTooltip" aria-tooltip="Aria description">
-        <mat-icon>subject</mat-icon><span class="side-nav-but-spacer"></span>Fundament
+        <mat-icon>subject</mat-icon><span class="side-nav-but-spacer"></span>About me
       </a>
 
       <a mat-list-item class="menu-item" matTooltip="Send me an e-mail or contact me via contact form from this website"
@@ -49,7 +49,7 @@
       </a>
     </mat-nav-list>
 <div class="menu2">
-    <button class="menu-item" mat-button color='warn' class="tooltips-button"
+    <button class="menu-item2" mat-button class="tooltips-button"
       matTooltip="Button to toggle Show / hide all tooltips, also user can scroll mouse or swipe to hide tooltips"
       #tooltip="matTooltip" (mousemove)="show = false" (click)="showAllTooltips()">
       Show / Hide all tooltips
